Fix: Issue with magic text not wrapping

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -93,6 +93,7 @@ input:focus {
 }
 
 .magic-text {
+  display: inline-block;
   animation: background-pan 4s linear infinite;
   background: linear-gradient(
     to right,
@@ -105,7 +106,6 @@ input:focus {
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
-  white-space: nowrap;
 }
 
 .magic-text-static {
